# wiiu_code_handler

./: CMakeLists.txt  README.md  main.c  main.cpp
code_handler/: architecture_specific.c  architecture_specific.h  code_handler.c  code_handler.cpp  code_handler.h  code_handler_enumerations.c  code_handler_enumerations.cpp  code_handler_enumerations.h  code_handler_functions.c  code_handler_functions.cpp  code_handler_functions.h  code_handler_gecko_registers.c  code_handler_gecko_registers.cpp  code_handler_gecko_registers.h  error_handling.h
code_handler/general/: bit_manipulations.c  bit_manipulations.cpp  bit_manipulations.h  endian.c  endian.cpp  endian.h  rounding.c  rounding.cpp  rounding.h
code_handler/operating_system/: operating_system_utilities.c  operating_system_utilities.cpp  operating_system_utilities.h
code_handler/testing/: benchmarking.cpp  benchmarking.h  testing_structures.h
